added base html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    {% load static %}
+
+    <!-- Boostratp core CSS -->
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <!--<link rel="icon" href="{% static 'images/favicon.ico' %}" type='image/x-icon'/>
+    <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" type='image/x-icon'/>-->
+    <meta name="viewport" content="width=device-width, initial-scale=0.8">
+    <meta name="description" content="">
+    <title>Traffic Incidents</title>
 </head>
 <body>
-    Test
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="">Table</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="">Heat Map</a>
+            </li>
+            </li>
+        </ul>
+    </div>
+</nav>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col">
+            <h1>Katie</h1>
+        </div>
+    </div>
+</div>
+<script src="js/bootstrap.bundle.js"></script>
 </body>
 </html>
