--- a/index.html
+++ b/index.html
@@ -2,16 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    {% load static %}
 
     <!-- Boostratp core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <!--<link rel="icon" href="{% static 'images/favicon.ico' %}" type='image/x-icon'/>
     <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" type='image/x-icon'/>-->
-    <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <meta name="description" content="">
-    <title>Traffic Incidents</title>
+    <title>Katie</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
