--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <button type="button" class="btn btn-primary">Contact Me</button>
+                        <button type="button" class="btn btn-primary" style="background-color: #C64FE0">Contact Me</button>
                     </div>
                 </div>
             </div>
